--- a/src/main/ui/src/app/app.component.html
+++ b/src/main/ui/src/app/app.component.html
@@ -1,3 +1,5 @@
 <h1>
   {{title}}
 </h1>
+<p-confirmDialog header="Confirmation" icon="fa fa-question-circle" width="425"></p-confirmDialog>
+<button type="text" (click)="confirm()" pButton icon="fa-check" label="Confirm"></button>
